fix: #68632 z-index调整

--- a/h5/src/h5/assets/styles/containers/course/detail/web-view.scss
+++ b/h5/src/h5/assets/styles/containers/course/detail/web-view.scss
@@ -4,7 +4,7 @@
 		position: absolute;
 		top: 8px;
 		right: vw(8);
-		z-index: 9999;
+		z-index: 2000;
 		display: flex;
 		align-items: center;
 		justify-content: center;
